<resources>
    <string name="app_name">Armenia TV</string>
    <string name="admob_app_id">ca-app-pub-4598992956351116~5391172723</string>
    <string name="admob_banner_id">ca-app-pub-4598992956351116/1941036395</string>
    <string name="admob_interstitial_id">ca-app-pub-4598992956351116/2746851604</string>
    <string name="gamob_banner_ad_unit_id">/112517806/139301556696907</string>
    <string name="gamob_interstitial_ad_unit_id">/112517806/339301556697019</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_add_favorite">Add to favorites</string>
    <string name="action_open">Open</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove_favorite">Remove from favorites</string>
    <string name="action_add">Add Playlist</string>
    <string name="action_add_url">Add URL</string>
    <string name="action_select_file">Select File</string>
    <string name="action_switch_view">Switch view</string>
    <string name="open_network_stream">Open IPTV Stream</string>
    <string name="add_link">Please enter a stream URL</string>
    <string name="open_network_stream_hint">http://example.com/stream.m3u8\nhttp://example.com/stream.ts\nhttp://example.com/stream.mp4</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="added_favorite_message">This channel was added to Favorites</string>
    <string name="removed_favorite_message">This channel was removed from Favorites</string>

    <string name="menu_show_as_entry_default">Default</string>

    <string name="nothing_found">Nothing found</string>
    <string name="folders">Folders</string>
    <string name="select_storage">Select storage</string>
    <string name="select_server">Load from Server</string>
    <string name="search">Search</string>
    <string name="title_activity_playlist">Playlists</string>
    <string name="title_activity_select_file">SelectFileActivity</string>

    <string name="empty_playlist_message">Please contact your IPTV provider to get M3U playlist with TV channels</string>
    <string name="add_playlist">Add playlist</string>
    <string name="add_url_message">Please input a network URL for your playlist</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="playlist_name">Playlist name (optionally)</string>

    <string name="no_channels">No channels</string>

    <string name="common_dialog_ok">OK, sure</string>
    <string name="common_dialog_yes">Yes!</string>
    <string name="common_dialog_cancel">No, thanks</string>
    <string name="common_dialog_not">Not really</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="question">Enjoying Armenia TV?</string>
    <string name="rating">How about a rating on the Play Store, then?</string>
    <string name="feedback">Would you mind to give us some feedback?</string>

    <string name="favorites">Favorites</string>
    <string name="history_watching">History Watching</string>
    <string name="no_history_watching">History Watching list is empty</string>
    <string name="no_favorites">No favorites</string>
    <string name="how_to_add_favorite">To add favorite: long press on channel, then select \"Add to favorites\" from the context menu</string>
    <string name="all_channels">All channels</string>

    <string name="playing_error">Error playing channel</string>

    <string name="share_subject">Check out Armenia TV</string>
    <string name="share_boday">Enjoy IP Television with Armenia TV</string>
    <string name="share_app_title">Share this application via</string>

    <string name="app_version">Version: %s</string>
    <string name="copyright">© 2020 iSeaSoft. All rights reserved.</string>
    <string name="contact">If you have any questions, ideas or suggestions, please feel free contact me at apps.iseasoft@gmail.com.</string>

    <string name="request_storage_permission_message">"Armenia TV will need to read external storage to display playlist files on your device."</string>
    <string name="request_storage_permission_message_load">"Armenia TV will need to read external storage to load playlist files on your device."</string>
    <string name="native_ads_id">/21617015150/407539/21859668535</string>
</resources>
