<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="101"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_switch_view"
        android:icon="@drawable/ic_grid"
        android:orderInCategory="102"
        android:title="@string/action_switch_view"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/grid"
                    android:icon="@drawable/ic_grid"
                    android:title="@string/grid" />

                <item
                    android:id="@+id/list"
                    android:icon="@drawable/ic_list"
                    android:title="@string/list" />

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/media_route_menu_item"
        android:orderInCategory="103"
        android:title="Cast"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>
</menu>
